--- a/app/assets/stylesheets/references/_references.scss
+++ b/app/assets/stylesheets/references/_references.scss
@@ -824,3 +824,9 @@ div[audio-data="reader_audio"] {
     }
   }
 }
+
+body.c_references.a_show {
+  #download {
+    margin-top: 20px;
+  }
+}
