--- a/app/assets/stylesheets/widgets/_widgets.scss
+++ b/app/assets/stylesheets/widgets/_widgets.scss
@@ -7,6 +7,10 @@
       height: rem-calc(130);
     }
   }
+  .bafk-icon {
+    width: 80px;
+    height: 80px;
+  }
 
   h3 {
     font-size: 1em;
